--- a/index.ipynb
+++ b/index.ipynb
@@ -18,6 +18,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,11 +39,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>len</th>\n",
+       "      <th>supp</th>\n",
+       "      <th>dose</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.2</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11.5</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.3</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    len supp  dose\n",
+       "0   4.2   VC   0.5\n",
+       "1  11.5   VC   0.5\n",
+       "2   7.3   VC   0.5\n",
+       "3   5.8   VC   0.5\n",
+       "4   6.4   VC   0.5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "df = pd.read_csv('ToothGrowth.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df.supp[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>len</th>\n",
+       "      <th>supp</th>\n",
+       "      <th>dose</th>\n",
+       "      <th>supp2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.2</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11.5</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.3</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    len supp  dose  supp2\n",
+       "0   4.2   VC   0.5      0\n",
+       "1  11.5   VC   0.5      0\n",
+       "2   7.3   VC   0.5      0\n",
+       "3   5.8   VC   0.5      0\n",
+       "4   6.4   VC   0.5      0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['supp2'] = df.supp\n",
+    "for i in range(len(df.supp)):\n",
+    "    if df.supp.loc[i] == 'VC':\n",
+    "        df.supp2.loc[i] = 0\n",
+    "    else:\n",
+    "        df.supp2.loc[i] = 1\n",
+    "df.head()"
    ]
   },
   {
@@ -46,11 +250,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               sum_sq    df           F        PR(>F)\n",
+      "C(supp2)   205.350000   1.0   11.446768  1.300662e-03\n",
+      "dose      2224.304298   1.0  123.988774  6.313519e-16\n",
+      "Residual  1022.555036  57.0         NaN           NaN\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "formula = 'len ~ dose + C(supp2)'\n",
+    "lm = ols(formula, df).fit()\n",
+    "table = sm.stats.anova_lm(lm, typ=2)\n",
+    "print(table)"
    ]
   },
   {
@@ -66,7 +285,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Your comment here"
+    "#Your comment here\n",
+    "dose strength is a more robust predictor of tooth growth. Supplementation, while significant, has a weaker effect. "
    ]
   },
   {
@@ -80,11 +300,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "vc = df[df.supp2==0]['len']\n",
+    "oj = df[df.supp2==1]['len']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06063450788093405"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import flatiron_stats as fs\n",
+    "\n",
+    "fs.p_value_welch_ttest(vc, oj, two_sided=True)"
    ]
   },
   {
@@ -92,15 +336,6 @@
    "metadata": {},
    "source": [
     "Now compare a t-test between these two groups and print the associated two-sided p-value."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Your code here; calculate the 2-sided p-value for a t-test comparing the two supplement groups."
    ]
   },
   {
@@ -116,13 +351,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               sum_sq    df         F    PR(>F)\n",
+      "C(supp2)   205.350000   1.0  3.668253  0.060393\n",
+      "Residual  3246.859333  58.0       NaN       NaN\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here; conduct an ANOVA F-test of the oj and vc supplement groups.\n",
     "#Compare the p-value to that of the t-test above. \n",
-    "#They should match (there may be a tiny fractional difference due to rounding errors in varying implementations)"
+    "#They should match (there may be a tiny fractional difference due to rounding errors in varying implementations)\n",
+    "\n",
+    "formula = 'len ~ C(supp2)'\n",
+    "lm = ols(formula, df).fit()\n",
+    "table = sm.stats.anova_lm(lm, typ=2)\n",
+    "print(table)"
    ]
   },
   {
@@ -136,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -168,13 +418,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(('OJ', 0.5), ('OJ', 1.0)) 1.1102230246251565e-15\n",
+      "(('OJ', 0.5), ('OJ', 2.0)) 0.0\n",
+      "(('OJ', 0.5), ('VC', 0.5)) 2.5210389109631137e-08\n",
+      "(('OJ', 0.5), ('VC', 1.0)) 4.817632791609405e-05\n",
+      "(('OJ', 0.5), ('VC', 2.0)) 0.0\n",
+      "(('OJ', 1.0), ('OJ', 2.0)) 2.7423676985716128e-05\n",
+      "(('OJ', 1.0), ('VC', 0.5)) 0.0\n",
+      "(('OJ', 1.0), ('VC', 1.0)) 1.91500149071544e-11\n",
+      "(('OJ', 1.0), ('VC', 2.0)) 0.0007500878903570207\n",
+      "(('OJ', 2.0), ('VC', 0.5)) 0.0\n",
+      "(('OJ', 2.0), ('VC', 1.0)) 0.0\n",
+      "(('OJ', 2.0), ('VC', 2.0)) 0.9267849358960447\n",
+      "(('VC', 0.5), ('VC', 1.0)) 0.0\n",
+      "(('VC', 0.5), ('VC', 2.0)) 0.0\n",
+      "(('VC', 1.0), ('VC', 2.0)) 8.881784197001252e-16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/scipy/stats/_continuous_distns.py:5193: RuntimeWarning: invalid value encountered in greater\n",
+      "  return df > 0\n",
+      "/anaconda3/lib/python3.7/site-packages/scipy/stats/_distn_infrastructure.py:877: RuntimeWarning: invalid value encountered in greater\n",
+      "  return (self.a < x) & (x < self.b)\n",
+      "/anaconda3/lib/python3.7/site-packages/scipy/stats/_distn_infrastructure.py:877: RuntimeWarning: invalid value encountered in less\n",
+      "  return (self.a < x) & (x < self.b)\n",
+      "/anaconda3/lib/python3.7/site-packages/scipy/stats/_distn_infrastructure.py:1748: RuntimeWarning: invalid value encountered in greater_equal\n",
+      "  cond2 = (x >= self.b) & cond0\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here; reuse your $t$-test code above to calculate the p-value for a 2-sided $t$-test\n",
     "#for all combinations of the supplement-dose groups listed above. \n",
-    "#(Since there isn't a control group, compare each group to every other group.)"
+    "#(Since there isn't a control group, compare each group to every other group.)\n",
+    "\n",
+    "from itertools import combinations\n",
+    "\n",
+    "groups = [group[0] for group in df.groupby(['supp', 'dose'])['len']]\n",
+    "combos = combinations(groups, 2)\n",
+    "for combo in combos:\n",
+    "    supp1 = combo[0][0]\n",
+    "    dose1 = combo[0][1]\n",
+    "    supp2 = combo[1][0]\n",
+    "    dose2 = combo[1][1]\n",
+    "    sample1 = df[(df.supp == supp1) & (df.dose == dose1)]\n",
+    "    sample2 = df[(df.supp == supp2) & (df.dose == dose2)]\n",
+    "    p = fs.p_value_welch_ttest(sample1, sample2, two_sided=True)\n",
+    "    print(combo, p[0])"
    ]
   },
   {
@@ -185,6 +485,13 @@
     "\n",
     "In this lesson, you examined the ANOVA technique to generalize A/B testing methods to multiple groups and factors."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -203,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
